fix overflow

--- a/src/app/modules/stream/components/stream.component.scss
+++ b/src/app/modules/stream/components/stream.component.scss
@@ -5,3 +5,7 @@ content-loader {
     max-height: 100%;
   }
 }
+:host ::ng-deep .cdk-virtual-scroll-content-wrapper {
+  width: 100%;
+  overflow: hidden;
+}
